# Machine-Learning-methods-and-models

./: .gitignore  INDEX.md  README.md  mapping.txt  pyproject.toml  requirements.txt
classical-techniques/: 01_knn_classifier.ipynb  02_polynomial_regression.ipynb  03_data_analysis.ipynb  README.md
classification/: 01_multitask_cnn_fmnist.ipynb  02_image_colorization_cifar10.ipynb  03_decision_trees_text.ipynb  README.md
clustering/: 01_kmeans_clustering.ipynb  02_gaussian_mixture_models.ipynb  03_image_segmentation_gmm.ipynb  04_pca_classification.ipynb  README.md
generative-models/: 01_diffusion_models.ipynb  01_variational_autoencoders.ipynb  02_diffusion_models.ipynb  README.md
neural-networks/: 01_border_prediction_mlp.ipynb  03_.ipynb  04_advanced_architectures.ipynb  06_rnn_recurrence.ipynb  README.md
regression/: 01_linear_regression_regularization.ipynb  README.md
utilities/: 01_knn_classifier.ipynb  02_polynomial_regression.ipynb  03_data_analysis.ipynb  README.md
